[tool.poetry]
name = "django, vue & graphql"
version = "0.1.0"
description = ""
authors = ["dimaevan <dimaevan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
